[gd_scene load_steps=2 format=3 uid="uid://gr5eqyhot8j2"]

[ext_resource type="Script" path="res://Menus/pause_menu.gd" id="1_vheki"]

[node name="pauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vheki")

[node name="pauseMenu" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = -59.0
offset_top = -96.0
offset_right = 65.0
offset_bottom = 5.0
metadata/_edit_group_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="pauseMenu"]
layout_mode = 2

[node name="Resume" type="Button" parent="pauseMenu/VBoxContainer"]
layout_mode = 2
text = "RESUME"

[node name="Restart" type="Button" parent="pauseMenu/VBoxContainer"]
layout_mode = 2
text = "RESTART"

[node name="QuitMenu" type="Button" parent="pauseMenu/VBoxContainer"]
layout_mode = 2
text = "QUIT TO MENU"

[node name="QuitGame" type="Button" parent="pauseMenu/VBoxContainer"]
layout_mode = 2
text = "QUIT GAME
"

[connection signal="pressed" from="pauseMenu/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="pauseMenu/VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="pauseMenu/VBoxContainer/QuitMenu" to="." method="_on_quit_menu_pressed"]
[connection signal="pressed" from="pauseMenu/VBoxContainer/QuitGame" to="." method="_on_quit_game_pressed"]
